[FIX] - Remove the overflow in the body

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: #11111e;
+    overflow-y: hidden;
 }
 
 h1{
